--- a/ETL_Engineer_Peer_Review_Assignment (1).ipynb
+++ b/ETL_Engineer_Peer_Review_Assignment (1).ipynb
@@ -373,19 +373,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 46,
    "id": "ced9215a",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Market Cap (US$ Billion)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>JPMorgan Chase</td>\n",
+       "      <td>390.934</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Industrial and Commercial Bank of China</td>\n",
+       "      <td>345.214</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Bank of America</td>\n",
+       "      <td>325.331</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Wells Fargo</td>\n",
+       "      <td>308.013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>China Construction Bank</td>\n",
+       "      <td>257.399</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                      Name  Market Cap (US$ Billion)\n",
+       "0                           JPMorgan Chase                   390.934\n",
+       "1  Industrial and Commercial Bank of China                   345.214\n",
+       "2                          Bank of America                   325.331\n",
+       "3                              Wells Fargo                   308.013\n",
+       "4                  China Construction Bank                   257.399"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Call the function here\n",
     "df = extract()\n",
     "# Print the rows here\n",
-    "df.head()\n",
-    "# Write your code here\n",
-    "log(\"Extract phase Ended\")\n"
+    "df.head()\n"
    ]
   },
   {
